@@ -34,6 +34,7 @@ Bug fixes
  * Fixed incorrect CSS path on ModelAdmin's "choose a parent page" view
  * Prevent empty redirect by overnormalisation
  * "Remove link" button in rich text editor didn't trigger "edit" event, leading to the change to sometimes not be persisted (Matt Westcott)
+ * ``RichText`` values can now be correctly evaluated as booleans (Mike Dingjan, Bertrand Bordage)
 
 
 Upgrade considerations
